<?xml version="1.0"?>
<package format="3">
  <name>plan_manage</name>
  <version>0.0.0</version>
  <description>The fast_planner plan_manage package (ROS 2)</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>LGPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Eigen support -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <depend>eigen</depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Internal package deps -->
  <depend>plan_env</depend>
  <depend>path_searching</depend>
  <depend>bspline</depend>
  <depend>bspline_opt</depend>
  <depend>traj_utils</depend>

  <!-- Optional external msgs (quadrotor_msgs is optional; do not declare hard exec depend) -->
  <!-- <exec_depend>quadrotor_msgs</exec_depend> -->

  <export/>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
