<?xml version="1.0"?>
<package format="3">
  <name>poly_traj</name>
  <version>0.0.0</version>
  <description>The poly_traj package (ROS 2)</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <maintainer email="rninamdar@wpi.edu">rninamdar</maintainer>
  <license>LGPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <depend>eigen</depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Optional external msgs if available -->
  <exec_depend>swarmtal_msgs</exec_depend>

  <export/>
</package>
