<?xml version="1.0"?>
<package format="3">
  <name>traj_utils</name>
  <version>0.0.0</version>
  <description>The traj_utils package (ROS 2)</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>LGPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>poly_traj</depend>
  <depend>path_searching</depend>
  <depend>bspline</depend>
  <depend>bspline_opt</depend>
  <depend>pcl_conversions</depend>

  <export/>
</package>
