<?xml version="1.0"?>
<package format="3">
  <name>bspline</name>
  <version>0.0.0</version>
  <description>The bspline package (library only)</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <maintainer email="rninamdar@wpi.edu">rninamdar</maintainer>
  <license>LGPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Eigen support for CMake find_package(Eigen3) in ROS2 -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <depend>eigen</depend>

  <!-- ROS2 client library used for logging -->
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export/>
</package>
